# lantern

./: .gitignore  CLAUDE.md  README.md  app.json  next.config.ts  package-lock.json  package.json
.expo/prebuild/: cached-packages.json
agents/: Untitled  db.py  gemma_client.py  journalist_store.py  main.py  requirements.txt  triage_agent.py
android/: settings.gradle
android/app/: build.gradle
app/: globals.css  layout.tsx  manifest.json  page.module.css  page.tsx
app/bounties/: page.tsx
app/how-it-works/: page.tsx
app/journalist/: layout.tsx  page.tsx
app/status/: page.tsx
app/submit/: page.tsx
app/transparency/: page.tsx
components/: BountyBoard.tsx  BountyCard.tsx  ClaimBountyWidget.tsx  CreateBountyForm.tsx  EdgeAIProgress.tsx  Navbar.tsx  PriorityBadge.tsx  ReviewQueue.tsx  SecureDropPrompt.tsx  TipCard.tsx  TipSubmissionForm.tsx  WorldIDButton.tsx
components/home/: JournalistEncryptDemo.tsx  SourceAnonymityDemo.tsx
components/journalist/: KeypairSetup.tsx  MarkClosedButton.tsx  PassphraseUnlock.tsx  RatingControls.tsx  RestoreFromBackup.tsx
ios/: Podfile
ios/lantern/: Info.plist
ios/lantern.xcodeproj/: project.pbxproj
lib/: agent-client.ts  credibility.ts  mongodb.ts  triage.ts  worldid.ts
lib/crypto/: file.ts  fingerprint.ts  keystore.ts  passphrase.ts
mobile/: README.md  app.json  package-lock.json  package.json
scripts/: devnet-transfer.js  keygen-claim-authority.js  seed-journalists.ts
solana/: Anchor.toml  README.md
solana/programs/lantern-bounty/: Cargo.toml
solana/programs/lantern-bounty/src/: lib.rs
(+75 files in other folders)
