[package]
name = "lantern-bounty"
version = "0.1.0"
description = "Lantern anonymous micro-bounty escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lantern_bounty"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
